Rewrite all backend modeles to Typescript
